# package-aigeanpy

./: .gitignore  CITATION.cff  CITATION.md  README.md  setup.cfg
.github/workflows/: pytest.yml
aigeanpy/: __init__.py  analysis.py  clustering.py  clustering_numpy.py  command.py  net.py  satmap.py
aigeanpy/tests/: aigean_ecn_20230104_145310.csv  test_command.py  test_net.py  test_sample_code.py  test_satmap.py
aigeanpy/tests/extra_aigean_files/: aigean_man_20230104_151010.hdf5  aigean_man_20230104_152610.hdf5  metadata_sample.json  mosaic_data_sample.npy  query_sample.json
aigeanpy/tests/extra_aigean_files/empty/: README.txt.txt
aigeanpy/tests/fixtures/: fixture_command.yml  fixture_example.yml
benchmark/: performance.py
docs/: conf.py  index.rst
docs/content/: aigeanpy.rst  aigeanpy.tests.rst  developer_guide.rst  installation.rst  modules.rst  tutorial.rst
