[metadata]
name = aigeanpy
version = 0.1.0
authors = #
authors_emails = #
license = # BSD 3-Clause License
description = # Calculate the averages through a sagittal plane.
long_description = # file: README.md, LICENSE.rst
long_description_content_type = # text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    # License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.9
# Add package requirements here
install_requires =
    numpy
    pyyaml
    requests
    h5py
    asdf
    matplotlib
    scikit-image

[options.entry_points]
console_scripts =
    aigean_today = aigeanpy.command:today
    aigean_metadata = aigeanpy.command:metadata
    aigean_mosaic = aigeanpy.command:mosaic

[options.packages.find]
exclude =
    *tests
