[metadata]
name = aigeanpy
version = 0.1.0
author =  Longwen H., Chen Q., Huang W., McQuade J., Avila Carrion A.
author-email = longwen.hu.22@ucl.ac.uk, qi.chen.22@ucl.ac.uk, weizhi.huang.22@ucl.ac.uk, joseph.mcquade.22@ucl.ac.uk, alejandro.carrion.19@ucl.ac.uk
license = GNU GENERAL PUBLIC LICENSE
description = Allows to work with Aigean satellite data from the Irish Space Agency webservice archive.
home-page = README.md
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License

[options]
packages = find:
python_requires = >=3.9
# Add package requirements here
install_requires =
    numpy
    pyyaml
    requests
    h5py
    asdf
    matplotlib
    scikit-image

[options.entry_points]
console_scripts =
    aigean_today = aigeanpy.command:today
    aigean_metadata = aigeanpy.command:metadata
    aigean_mosaic = aigeanpy.command:mosaic

[options.packages.find]
exclude =
    *tests
